# amazing

./: README.md  Readme  a_maze_ing.py  config.txt  hexa_output.py  main_walls.py  makefile  output_maze.txt  parse_config_file.py  pyproject.toml  requirements.txt
mazegen/: __init__.py  config.txt  hexa_output.py  mazegen.py
src/mazegen/: __init__.py
