[project]
name = "mazegen"
version = "0.1.0"
readme= "README.md"
description = "A standalone maze generator and solver."
authors = [
    {name = "zhaouzan, abchahid"}
]
requires-python = ">=3.13"
dependencies = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
