[project]
name = "mazegen"
version = "0.1.0"
description = "Maze Generator generate a maze with dfs or Prime."
authors = [
    {name = "zhaouzan,abchahid"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
